# pipeline

./: .cproject  .gitignore  .project  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Converter.cpp  Converter.h  Decoder.cpp  Decoder.h  EllipseFitter.cpp  EllipseFitter.h  Grid.cpp  Grid.h  GridFitter.cpp  GridFitter.h  GroundTruthEvaluator.cpp  GroundTruthEvaluator.h  Localizer.cpp  Localizer.h  Localizer_old.cpp  Preprocessor.cpp  Preprocessor.h  README.md  Recognizer.cpp  Recognizer.h  Transformer.cpp  Transformer.h  blargs.cpp  blargs.h  blargs_impl.h  fill convex_poly_test_colors.h  fill_convex_poly.h  fill_convex_poly.impl.h  fill_convex_poly_cv.h  fill_convex_poly_cv.impl.h  fill_convex_poly_cv2.impl.h  fill_convex_poly_cv_impl.h  fill_convex_poly_impl.h  fill_convex_poly_test_functors.h  (+38 more)
common/: Grid.cpp  Grid.h
datastructure/: BBList.cpp  BBList.h  BoundingBox.h  CvHelper.h  Decoding.h  Ellipse.cpp  Ellipse.h  Grid.cpp  Grid.h  PipelineGrid.cpp  PipelineGrid.h  PipelineGrid.impl.h  Tag.cpp  Tag.h  TagCandidate.h  TagList.cpp  TagList.h  serialization.hpp  settings.h  util.h
pipeline/: Decoder.h  EllipseFitter.h  GridFitter.h  Localizer.h  Preprocessor.h  compat.h
pipeline/common/: Grid.h
pipeline/datastructure/: Ellipse.h  PipelineGrid.h  PipelineGrid.impl.h  PreprocessorResults.h  Tag.h  serialization.hpp
pipeline/settings/: EllipseFitterSettings.h  GridFitterSettings.h  LocalizerSettings.h  PreprocessorSettings.h  Settings.h
pipeline/src/: Decoder.cpp  EllipseFitter.cpp  GridFitter.cpp  Localizer.cpp  Preprocessor.cpp
pipeline/src/common/: Grid.cpp
pipeline/src/datastructure/: Ellipse.cpp  PipelineGrid.cpp  Tag.cpp
pipeline/src/settings/: DecoderSettings.cpp  EllipseFitterSettings.cpp  GridFitterSettings.cpp  LocalizerSettings.cpp  PreprocessorSettings.cpp  Settings.cpp
pipeline/src/util/: Quaternions.cpp  Util.cpp
pipeline/src/util/opencv_fill_poly/: fill_convex_poly_tests.cpp  fill_poly_main.cpp  helper.cpp  line_iterator.cpp  line_iterator_cv.cpp  poly_line_iterator.cpp  poly_line_vertical_iterator.cpp  ring_iterator.cpp
pipeline/util/: GroundTruthEvaluator.cpp  GroundTruthEvaluator.h  Quaternions.h
pipeline/util/opencv_fill_poly/: .cproject  fill convex_poly_test_colors.h  fill_convex_poly_cv.h  fill_convex_poly_test_functors.h  helper.h  helper.impl.h  line_iterator.h  line_iterator_cv.h  poly_line_iterator.impl.h  test_helper.h
settings/: DecoderSettings.cpp  DecoderSettings.h  EllipseFitterSettings.cpp  GridFitterSettings.cpp  LocalizerSettings.cpp  LocalizerSettings.h  PreprocessorSettings.cpp  Settings.cpp  Settings.h
util/: CvHelper.h  GroundTruthEvaluator.cpp  GroundTruthEvaluator.h  ThreadPool.h  Util.cpp  Util.h
util/opencv_fill_poly/: .gitignore  fill_convex_poly.h  fill_convex_poly.impl.h  fill_convex_poly_cv.h  fill_convex_poly_cv.impl.h  fill_convex_poly_test_functors.h  fill_convex_poly_tests.cpp  fill_convex_poly_tests.h  fill_poly_main.cpp  helper.cpp  helper.h  helper.impl.h  line_iterator.cpp  line_iterator.h  line_iterator.impl.h  line_iterator_cv.impl.h  line_iterator_test_helper.h  lines.h  lines_impl.h  poly_line_iterator.cpp  poly_line_iterator.h  poly_line_iterator.impl.h  poly_line_vertical_iterator.cpp  poly_line_vertical_iterator.h  poly_line_vertical_iterator.impl.h  ring_iterator.cpp  ring_iterator.h  ring_iterator.impl.h
